# pkg/ocp-timeline-api/ocp_timeline_api.pb.gw.go
@@ -245,6 +245,40 @@ func local_request_OcpTimelineApi_UpdateTimelineV1_0(ctx context.Context, marsha
 
 }
 
+func request_OcpTimelineApi_MultiCreateTimelinesV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpTimelineApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreateTimelinesV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.MultiCreateTimelinesV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_OcpTimelineApi_MultiCreateTimelinesV1_0(ctx context.Context, marshaler runtime.Marshaler, server OcpTimelineApiServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreateTimelinesV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.MultiCreateTimelinesV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterOcpTimelineApiHandlerServer registers the http handlers for service OcpTimelineApi to "mux".
 // UnaryRPC     :call OcpTimelineApiServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -363,6 +397,29 @@ func RegisterOcpTimelineApiHandlerServer(ctx context.Context, mux *runtime.Serve
 		}
 
 		forward_OcpTimelineApi_UpdateTimelineV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("POST", pattern_OcpTimelineApi_MultiCreateTimelinesV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_OcpTimelineApi_MultiCreateTimelinesV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpTimelineApi_MultiCreateTimelinesV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -507,6 +564,26 @@ func RegisterOcpTimelineApiHandlerClient(ctx context.Context, mux *runtime.Serve
 
 	})
 
+	mux.Handle("POST", pattern_OcpTimelineApi_MultiCreateTimelinesV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_OcpTimelineApi_MultiCreateTimelinesV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OcpTimelineApi_MultiCreateTimelinesV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -520,6 +597,8 @@ var (
 	pattern_OcpTimelineApi_RemoveTimelineV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "timelines", "id"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_OcpTimelineApi_UpdateTimelineV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "timelines"}, "", runtime.AssumeColonVerbOpt(true)))
+
+	pattern_OcpTimelineApi_MultiCreateTimelinesV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "timelines", "multi"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
@@ -532,4 +611,6 @@ var (
 	forward_OcpTimelineApi_RemoveTimelineV1_0 = runtime.ForwardResponseMessage
 
 	forward_OcpTimelineApi_UpdateTimelineV1_0 = runtime.ForwardResponseMessage
+
+	forward_OcpTimelineApi_MultiCreateTimelinesV1_0 = runtime.ForwardResponseMessage
 )
